RESPTHEME-117-bugfix-one Fixed - spacing in icons

--- a/core/sass/style.scss
+++ b/core/sass/style.scss
@@ -36,7 +36,7 @@ body {
 
 [class^="icon-"],
 [class*=" icon-"] {
-    margin-right: 5px;
+    margin:  5px;
 }
 
 /*--------------------------------------------------------------
